@@ -1,7 +1,5 @@
 // peeph.def - STM8 peephole rules
 
-// Dead loads disabled until we have notUsed() for flags.
-
 replace restart {
 	ld	%1, %2
 } by {
@@ -252,15 +250,15 @@ replace restart {
 } if notUsed('a'), notSame(%2 'push' 'pop'), notSame(%1 'xl' 'xh' 'yl' 'yh')
 
 replace restart {
-	ld	a, (x)
+	ld	a, %1
 	or	a, #0x80
-	ld	(x), a
+	ld	%1, a
 } by {
-	rlc	(x)
+	rlc	%1
 	scf
-	rrc	(x)
+	rrc	%1
 	; peephole 17 set msb in carry instead of a.
-} if notUsed('a')
+} if notUsed('a'), notSame(%1 'xl' 'xh' 'yl' 'yh'), notUsed('c'), notVolatile(%1)
 
 replace restart {
 	ld	a, %1
